Overflow issue resolved

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -9,7 +9,7 @@
     margin-left: 5rem;
     margin-inline-start: 20px;
     text-decoration: none;
-    color: rgb(153, 153, 153);
+    color: whitesmoke;
     transition: color .05s;
 }
 
